# efbt

./: .gitignore  CLAUDE.md  EXTENSION_DEVELOPMENT_WORKFLOW.md  PLAN.md  README  SPEC_TEMPLATE_EDITOR_AND_INTERACTIVE_REPORT.md  code_space_startup.sh  code_space_startup_with_tests.sh  linux_startup.sh  windows_startup.bat
birds_nest/: .gitignore  .migration_ready_marker  AORTA_IMPLEMENTATION_SUMMARY.md  BRANCH_IMPROVEMENTS.md  DPM_DUAL_SOURCE_IMPLEMENTATION_PLAN.md  PIPELINE_ISOLATION_PLAN.md  UI_WORKFLOW_SPECIFICATION.md  automode_config.json  clone_mode_config.example.json  code_quality_results.txt  db.sqlite3  manage.py  process_metadata.json  pyproject.toml  rebase_urls.py  requirements.txt  run_ruff_checks.sh  test_aorta_implementation.py
birds_nest/birds_nest/: __init__.py  asgi.py  local_settings.py  settings.py  urls.py  views.py  wsgi.py
birds_nest/extensions/: .gitignore  README.md
birds_nest/git_workflows/: django.yml
birds_nest/import_results/: debug_import_bird_axis.txt  debug_import_bird_axis_ordinate.txt  debug_import_bird_combination.txt  debug_import_bird_combination_item.txt  debug_import_bird_cube.txt  debug_import_bird_cube_link.txt  debug_import_bird_cube_structure.txt  debug_import_bird_cube_structure_item.txt  debug_import_bird_cube_structure_item_link.txt  debug_import_bird_cube_to_combination.txt  debug_import_bird_domain.txt  debug_import_bird_facet_collection.txt  debug_import_bird_framework.txt  debug_import_bird_maintenance_agency.txt  debug_import_bird_mapping_definition.txt  debug_import_bird_mapping_to_cube.txt  debug_import_bird_member.txt  debug_import_bird_member_hierarchy.txt  debug_import_bird_member_hierarchy_node.txt  debug_import_bird_member_link.txt  debug_import_bird_member_mapping.txt  debug_import_bird_member_mapping_item.txt  debug_import_bird_subdomain.txt  debug_import_bird_subdomain_enumeration.txt  debug_import_bird_table.txt  debug_import_bird_table_cell.txt  debug_import_bird_variable.txt  debug_import_bird_variable_mapping.txt  debug_import_bird_variable_mapping_item.txt  debug_import_bird_variable_set.txt  debug_import_bird_variable_set_enumeration.txt  (+5 more)
(+912 files in other folders)
