[project]
name = "birds-nest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
    "django>=5.1.3",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "panflute>=2.3.1",
    "pyecore>=0.15.1",
    "pypandoc>=1.15",
    "pytest>=8.4.1",
    "requests>=2.32.3",
    "ruff>=0.12.2",
    "unidecode>=1.3.8",
]
