
[project]
name = "birds-nest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django==5.1.3",
    "pyecore==0.15.1",
    "pytest==8.3.4",
    "pytest-xdist==3.6.1",
    "ruff==0.9.7",
    "pandas",
    "requests",
    "psutil",
]
[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B"]

# 2. Avoid enforcing line-length violations (`E501`)
ignore = ["E501","E402","B905"]

# 3. Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]
