
[project]
name = "birds-nest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django==5.1.3",
    "pyecore==0.15.1",
    "pytest==8.3.4",
    "pytest-xdist==3.6.1",
    "requests",
    "psutil",
    "numpy>=2.3.3",
    "black==24.4.2",
    "pylint==3.1.0",
]

[tool.black]
line-length = 120
target-version = ["py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.git
  | \.venv
  | \.eggs
  | \.tox
  | \.mypy_cache
  | \.pytest_cache
  | __pycache__
  | build
  | dist
)/
'''

[tool.pylint.main]
max-line-length = 120
disable = [
    "C0103",  # invalid-name
    "C0111",  # missing-docstring
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "W0613",  # unused-argument
    "E1101",  # no-member (often false positives with Django)
    "C0301",  # line-too-long (handled by black)
]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.messages_control]
extension-pkg-whitelist = ["numpy", "django"]
